TBT-372 Fix global banner text alignment

--- a/app/styles/app/modules/flash.scss
+++ b/app/styles/app/modules/flash.scss
@@ -1,7 +1,6 @@
 .flash {
   @include resetul;
 
-  text-align: center;
   height: 0;
 
   li {
